--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/abL"
@@ -9,9 +9,21 @@
     tools:context=".Activities.Reservas">
 
 
-    <ScrollView
-        android:layout_width="347dp"
-        android:layout_height="393dp"
+    <HorizontalScrollView
+        android:layout_width="369dp"
+        android:layout_height="400dp"
+        android:layout_alignTop="@+id/spLocalidad"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginBottom="209dp"
         android:layout_x="31dp"
         android:layout_y="159dp">
 
@@ -21,36 +33,67 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#FFDF2662"
             android:orientation="vertical" />
-    </ScrollView>
+    </HorizontalScrollView>
 
     <Spinner
         android:id="@+id/spLocalidad"
-        android:layout_width="349dp"
-        android:layout_height="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
         android:layout_x="30dp"
         android:layout_y="99dp"
-        android:outlineSpotShadowColor="#FFFF"
         android:background="@drawable/btndetalles"
         android:foregroundTint="#FFFF"
-        android:foregroundTintMode="src_in"/>
+        android:foregroundTintMode="src_in"
+        android:outlineSpotShadowColor="#FFFF" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="197dp"
-        android:layout_height="36dp"
+        android:layout_width="217dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/spLocalidad"
+        android:layout_alignLeft="@+id/spLocalidad"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
         android:layout_x="106dp"
         android:layout_y="38dp"
         android:fontFamily="@font/fonts"
-        android:textColor="#FFF"
-        android:textSize="20dp"
-
         android:text="Seleccione Localidad"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="#FFF"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/btnReserva"
         android:layout_width="274dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="66dp"
+        android:layout_marginLeft="66dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="91dp"
         android:layout_x="67dp"
         android:layout_y="576dp"
         android:background="@drawable/btndetalles"
@@ -61,4 +104,4 @@
         android:textColor="@drawable/txtbtninicio" />
 
 
-</AbsoluteLayout>
+</RelativeLayout>
