--- a/app/src/main/res/layout/activity_pago_evento.xml
+++ b/app/src/main/res/layout/activity_pago_evento.xml
@@ -103,16 +103,17 @@
     <TextView
         android:id="@+id/tvTotal"
         android:layout_width="222dp"
-        android:layout_height="76dp"
+        android:layout_height="83dp"
         android:text="5000.00"
         android:textColor="@color/colorblanco"
         android:textSize="50dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.827" />
+        app:layout_constraintVertical_bias="0.83" />
 
     <ImageView
         android:id="@+id/ivEvento"
