--- a/app/src/main/res/layout/activity_factura.xml
+++ b/app/src/main/res/layout/activity_factura.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="CHRONOS"
         android:textSize="60dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
@@ -53,6 +54,7 @@
         android:layout_height="wrap_content"
         android:text="Quetzaltenango, Guatemala"
         android:textSize="18dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +67,7 @@
         android:layout_height="wrap_content"
         android:text="NIT: 123465-9"
         android:textSize="20dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -79,6 +82,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:text="EFACE"
         android:textSize="18dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +94,7 @@
         android:layout_height="wrap_content"
         android:text="Nombre:"
         android:textSize="18dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
@@ -102,6 +107,7 @@
         android:layout_width="286dp"
         android:layout_height="25dp"
         android:text="Nombre"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.768"
@@ -115,6 +121,7 @@
         android:layout_height="wrap_content"
         android:text="NIT:"
         android:textSize="18dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
@@ -127,6 +134,7 @@
         android:layout_width="252dp"
         android:layout_height="23dp"
         android:text="TextView"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.402"
@@ -141,6 +149,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:text="20"
         android:textSize="20dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.336"
@@ -155,6 +164,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Fecha"
         android:textSize="18dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,6 +179,7 @@
         android:layout_marginRight="132dp"
         android:text="entradas a: "
         android:textSize="20dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -181,6 +192,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:text="TextView"
         android:textSize="20dp"
+        app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
