--- a/app/src/main/res/layout/fragment_reservas.xml
+++ b/app/src/main/res/layout/fragment_reservas.xml
@@ -8,94 +8,17 @@
     android:background="@drawable/degradado"
     tools:context=".fragments.reservas">
 
-    <TextView
-        android:id="@+id/textView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayouth"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="EVENTOS RESERVADOS"
-        android:textColor="@color/colorblanco"
-        android:textSize="40dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textEspacio"
-        android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            tools:listitem = "@layout/layout_historial"
+            android:id="@+id/recyclerViewModel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iVEvento1"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_weight="0"
-            android:src="@drawable/evento3" />
-
-        <TextView
-            android:id="@+id/tVEvento1"
-            android:layout_width="wrap_content"
-            android:layout_height="180dp"
-            android:layout_weight="0"
-            android:fontFamily="@font/fonts"
-            android:gravity="center"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore"
-            android:textColor="@color/colorblanco"
-            android:textSize="20dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="0"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iVEvento2"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_weight="0"
-            android:src="@drawable/evento2" />
-
-        <TextView
-            android:id="@+id/tVEvento2"
-            android:layout_width="wrap_content"
-            android:layout_height="180dp"
-            android:layout_weight="0"
-            android:fontFamily="@font/fonts"
-            android:gravity="center"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore "
-            android:textColor="@color/colorblanco"
-            android:textSize="20dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="0"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iVEvento3"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_weight="0"
-            android:src="@drawable/evento1" />
-
-        <TextView
-            android:id="@+id/tVEvento3"
-            android:layout_width="wrap_content"
-            android:layout_height="180dp"
-            android:layout_weight="0"
-            android:fontFamily="@font/fonts"
-            android:gravity="center"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore"
-            android:textColor="@color/colorblanco"
-            android:textSize="20dp" />
-    </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
