--- a/app/src/main/res/layout/ventana_inicio_1.xml
+++ b/app/src/main/res/layout/ventana_inicio_1.xml
@@ -7,39 +7,42 @@
 
     <TextView
         android:id="@+id/texto_eventos_cercanos"
-        android:layout_width="wrap_content"
+        android:layout_width="396dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
+        android:fontFamily="@font/fonts"
+        android:gravity="center_horizontal"
         android:text="@string/encuentra_eventos_cercanos_a_ti"
-        android:textSize="20sp"
-        android:textColor="#FFFF"/>
+        android:textColor="#FFFF"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/texto_nombre_evento_cercano"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="347dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:gravity="center_horizontal"
         android:text="@string/el_evento_m_s_cercano_a_ti_es"
-        android:textSize="18dp"
-        android:textColor="#FFFF"/>
+        android:textColor="#FFFF"
+        android:textSize="18dp" />
 
 
 </RelativeLayout>
