--- a/app/src/main/res/layout/ventana_inicio_2.xml
+++ b/app/src/main/res/layout/ventana_inicio_2.xml
@@ -6,38 +6,42 @@
 
     <TextView
         android:id="@+id/texto_ultimos_eventos"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:fontFamily="@font/fonts"
+        android:gravity="center_horizontal"
         android:text="@string/mira_los_ultimos_eventos"
-        android:textSize="20dp"
-        android:textColor="#FFFF"/>
+        android:textColor="#FFFF"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/texto_nombre_evento_nuevo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="398dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="341dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:fontFamily="@font/fonts"
+        android:gravity="center_horizontal"
         android:text="@string/el_evento_m_s_nuevo_es"
-        android:textSize="18dp"
-        android:textColor="#FFFF"/>
+        android:textColor="#FFFF"
+        android:textSize="18dp" />
 
 </RelativeLayout>
